modified:   templates/index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -156,7 +156,7 @@ footer {
 
 <!-- Footer -->
 <footer>
-    © 2026 Madhan Ticket Booking App | All Rights Reserved
+    © 2026 Madhan Ticket Booking App Pvt limited | All Rights Reserved
 </footer>
 
 <!-- JS -->
