--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,21 @@
  href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
  integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
  crossorigin="anonymous">
+ <!-- jQuery -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
 
+<!-- Popper JS -->
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+        
 <style>
 body {
     background-color: #f4f6f9;
@@ -98,14 +112,14 @@ footer {
                             <label>Select Source City</label>
                             <select name="source" id="source" class="form-control" required>
                                 <option value="">Select</option>
-                                <option>Hyderbad</option>
-                                <option>Chennai</option>
-                                <option>Banglore</option>
-                                <option>Tirupati</option>
-                                <option>Manglore</option>
-                                <option>Palamaner</option>
-                                <option>Delhi</option>
-                                <option>Pune</option>
+                                <option value="Hyderbad">Hyderbad</option>
+                                <option value="Chennai">Chennai</option>
+                                <option value="Banglore">Banglore</option>
+                                <option value="Tirupati">Tirupati</option>
+                                <option value="Manglore">Manglore</option>
+                                <option value="Palamaner">Palamaner</option>
+                                <option value="Delhi">Delhi</option>
+                                <option value="Pune">Pune</option>
                             </select>
                         </div>
 
@@ -113,14 +127,14 @@ footer {
                             <label>Select Destination City</label>
                             <select name="destination" id="destination" class="form-control" required>
                                 <option value="">Select</option>
-                                <option>Hyderbad</option>
-                                <option>Chennai</option>
-                                <option>Banglore</option>
-                                <option>Tirupati</option>
-                                <option>Manglore</option>
-                                <option>Palamaner</option>
-                                <option>Delhi</option>
-                                <option>Pune</option>
+                                <option value="Hyderbad">Hyderbad</option>
+                                <option value="Chennai">Chennai</option>
+                                <option value="Banglore">Banglore</option>
+                                <option value="Tirupati">Tirupati</option>
+                                <option value="Manglore">Manglore</option>
+                                <option value="Palamaner">Palamaner</option>
+                                <option value="Delhi">Delhi</option>
+                                <option value="Pune">Pune</option>
                             </select>
                         </div>
 
