--- a/templates/login.html
+++ b/templates/login.html
@@ -30,7 +30,7 @@ body {
 
 /* Hero section */
 .hero {
-    background: linear-gradient(135deg, #dc3535, #114be3);
+    background: linear-gradient(135deg, #0dd1df, #a23ee0);
     color: white;
     padding: 50px 20px;
     text-align: center;
@@ -83,63 +83,42 @@ footer {
       </li>
     </ul>
     <span class="navbar-text text-danger">
-      Madhan Ticket Booking App
+      Madhan  Mohan Ticket Booking App
     </span>
   </div>
 </nav>
 
 <!-- Hero Section -->
 <div class="hero">
-    <h1>Book Your Bus Tickets Easily</h1>
+    <h1>Booking platform make your Jouney Easy</h1>
     <p class="lead">
         Safe • Comfortable • Affordable travel across major cities in India
     </p>
 </div>
 
-<!-- Booking Section -->
 <div class="container booking-card">
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="card shadow">
                 <div class="card-body">
                     <h4 class="card-title text-center text-danger mb-4">
-                        Search Bus Tickets
+                        Admin Login 
                     </h4>
 
                     <form method="post">
 
                         <div class="form-group">
-                            <label>Select Source City</label>
-                            <select name="source" id="source" class="form-control" required>
-                                <option value="">Select</option>
-                                <option value="Hyderbad">Hyderbad</option>
-                                <option value="Chennai">Chennai</option>
-                                <option value="Banglore">Banglore</option>
-                                <option value="Tirupati">Tirupati</option>
-                                <option value="Manglore">Manglore</option>
-                                <option value="Palamaner">Palamaner</option>
-                                <option value="Delhi">Delhi</option>
-                                <option value="Pune">Pune</option>
-                            </select>
+                            <label>User Name</label>
+                            <input type="text" name="username" id="username" class="form-control" required>
                         </div>
 
                         <div class="form-group">
-                            <label>Select Destination City</label>
-                            <select name="destination" id="destination" class="form-control" required>
-                                <option value="">Select</option>
-                                <option value="Hyderbad">Hyderbad</option>
-                                <option value="Chennai">Chennai</option>
-                                <option value="Banglore">Banglore</option>
-                                <option value="Tirupati">Tirupati</option>
-                                <option value="Manglore">Manglore</option>
-                                <option value="Palamaner">Palamaner</option>
-                                <option value="Delhi">Delhi</option>
-                                <option value="Pune">Pune</option>
-                            </select>
+                            <label>Enter Password</label>
+                            <input type="password" name="password" id="password"   class="form-control" required>
                         </div>
 
-                        <button type="submit" class="btn btn-danger btn-block">
-                            Proceed To Book
+                        <button type="submit" class="btn btn-primary btn-block">
+                            Login
                         </button>
 
                     </form>
@@ -172,26 +151,5 @@ footer {
 <footer>
     © 2026 Madhan Ticket Booking App Pvt limited | All Rights Reserved
 </footer>
-
-<!-- JS -->
-<script>
-        const source= document.getElementById("source");
-        const destination= document.getElementById("destination");
-        source.addEventListener('change',function (){
-            const selectdcity=this.value;
-            Array.from(destination.options).forEach(Option =>{
-                Option.disabled=false
-            });
-        if (selectdcity!=""){
-            const matching =destination.querySelector(`option[value="${selectdcity}"]`)
-            if (matching){
-                matching.disabled=true;
-                if (destination.value===selectdcity){
-                    destination.value="";
-                }
-            }
-        }
-        })
-    </script>
 </body>
 </html>
